manifest/objects/Apttus__WizardRuntime__c.object
<CustomObject>
    <description>A runtime instance of the wizard design</description>
    <fields>
        <fullName>Apttus__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates status of a wizard as being completed or in progress</description>
        <inlineHelpText>Indicates status of a wizard as being completed or in progress</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Continue__c</fullName>
        <description>Use this action to continue an In-Progress wizard</description>
        <formula>IF(Apttus__Completed__c = false, HYPERLINK(&quot;/apex/Apttus__Wizard?wizardruntimeid=&quot; &amp;Id,&quot;Continue&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this action to continue an In-Progress wizard</inlineHelpText>
        <label>Continue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Review__c</fullName>
        <description>Use this action to review a completed wizard</description>
        <formula>IF(Apttus__Completed__c = true, HYPERLINK(&quot;/apex/Apttus__Wizard?wizardruntimeid=&quot; &amp;Id,&quot;Review&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this action to review a completed wizard</inlineHelpText>
        <label>Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference/Lookup to wizard design</description>
        <inlineHelpText>Reference/Lookup to wizard design</inlineHelpText>
        <label>Wizard</label>
        <referenceTo>Apttus__Wizard__c</referenceTo>
        <relationshipName>WizardRuntime1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardInstanceNumber__c</fullName>
        <description>Auto number (counter) of Wizard runtime. This identifies the Wizard runtime uniquely in the chronology of creation.</description>
        <inlineHelpText>Auto number (counter) of Wizard runtime. This identifies the Wizard runtime uniquely in the chronology of creation.</inlineHelpText>
        <label>Wizard Instance Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardStepStartId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference/Lookup to start step</description>
        <inlineHelpText>Reference/Lookup to start step</inlineHelpText>
        <label>Wizard Step</label>
        <referenceTo>Apttus__WizardStep__c</referenceTo>
        <relationshipName>WizardRuntime1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Runtime (Deprecated)</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Apttus__Completed__c</columns>
        <columns>Apttus__Continue__c</columns>
        <columns>Apttus__Review__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Wizard Runtime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Runtime</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>